--- a/_config.yml
+++ b/_config.yml
@@ -26,13 +26,13 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+# github_username:  jekyll
 
 # Build settings
 # theme: minima
-plugins:
-  - jekyll-feed
+# plugins:
+  # - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -55,7 +55,7 @@ plugins:
 #   - vendor/ruby/
 
 
-urls:
-  homepage: /index.html
-  privacy: /privacy-policy
-  terms: /terms-of-use
+# urls:
+#   homepage: /index.html
+#   privacy: /privacy-policy
+#   terms: /terms-of-use
